--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "fuzzt"
 version = "0.1.0"
+edition = "2021"
 authors = ["Luiz Otavio Vilas Boas Oliveira <luiz.vbo@gmail.com>"]
 description = """
 Implementations of string similarity metrics. Includes Hamming, Levenshtein,
@@ -13,3 +14,7 @@ homepage = "https://github.com/luizvbo/fuzzt"
 repository = "https://github.com/luizvbo/fuzzt"
 exclude = ["/.github", "/dev"]
 categories = ["text-processing"]
+rust-version = "1.70.0"
+
+[dev-dependencies]
+rstest = "0.18.2"
